--- a/src/Components/Board/BoardCell.module.css
+++ b/src/Components/Board/BoardCell.module.css
@@ -2,3 +2,77 @@
     width: 100%;
     height: 100%;
 }
+
+
+.value {
+    margin: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Arial';
+    font-size: 2.7rem;
+    font-weight: bolder;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+  
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    transform: rotateY(180deg);
+  }
+
+@media screen and (max-width: 650px) {
+    .value {
+        font-size: 2.5rem;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .value {
+        font-size: 2.3rem;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .value {
+        font-size: 2.1rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .value {
+        font-size: 1.9rem;
+    }
+}
